# smartschool

./: .gitattributes  .gitignore  .sonarcloud.properties  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  credentials.yml.example  pyproject.toml  restub  run  sonar-project.properties
.github/: dependabot.yml
.github/changelog/: changelog.md.j2  release_notes.md.j2
.github/workflows/: claude-code-review.yml  claude.yml  clear-caches.yml  codecov-gate.yml  pr-title.yml  release.yml  run_tests.yml  sonarcloud.yml  tests.yml
dev/: generate_stubs.py  web_monitor.py
docs/: authentication.md  courses.md  errors.md  intradesk.md  messages.md  mydocs.md  planner.md  results.md  schedule.md
scripts/: _common_tasks_stuff.py  download_all_courses.py  download_all_results.py  list_all_agenda  list_all_courses  list_all_future_tasks  list_all_intradesk  list_all_messages.py  list_all_results  list_all_topnavcourses  send_message.py  smartschool_browse_docs  smartschool_browse_docs.py  smartschool_download_all_documents  smartschool_download_all_documents.py  smartschool_report_on_future_tasks  smartschool_report_on_planned_tasks  smartschool_report_on_results
smartschool/: __init__.py  _xml_interface.py  agenda.py  common.py  courses.py  credentials.py  messages.py  objects.py  periods.py  results.py  session.py  student_support.py
src/smartschool/: __init__.py  _agenda.py  _agenda.pyi  _common.py  _courses.py  _courses.pyi  _credentials.py  _dev_tracing.py  _exceptions.py  _future_tasks.py  _intradesk.py  _message_composer.py  _messages.py  _messages.pyi  _mydocs.py  _objects.py  _periods.py  _planner.py  _reports.py  _reports.pyi  _results.py  _results.pyi  _session.py  _student_support.py  _xml_interface.py  agenda.py  common.py  courses.py  courses.pyi  credentials.py  exceptions.py  future_tasks.py  intradesk.py  logger.py  message_composer.py  messages.py  objects.py  periods.py  planner.py  reports.py  (+5 more)
tests/: agenda_future_tasks_tests.py  agenda_hours_tests.py  agenda_lessons_tests.py  agenda_moment_info_tests.py  common_tests.py  conftest.py  courses_e2e_tests.py  courses_file_item_tests.py  courses_folder_item_tests.py  courses_internet_shortcut_tests.py  courses_tests.py  credentials_tests.py  dev_tracing_tests.py  generate_stubs_tests.py  intradesk_tests.py  message_composer_tests.py  messages_tests.py  mydocs_tests.py  objects_tests.py  periods_tests.py  planner_tests.py  reports_tests.py  results_tests.py  session_tests.py  student_support_tests.py  xml_interface_tests.py
tests/requests/: login.html
tests/requests/get/: account-verification.json  be459ac8fc36.json
tests/requests/get/composemessage/: new-message.html
tests/requests/get/course-list/api/v1/: courses.json
tests/requests/get/intradesk/api/v1/: recent.json
tests/requests/get/mydoc/api/v1/: directory-listing.json
tests/requests/get/student-support/api/: v1.json
tests/requests/post/: login.json
tests/requests/post/Messages/Xhr/: archivemessages.json
tests/requests/post/Topnav/: getCourseConfig.json
tests/requests/post/agenda/: get lessons.xml  get moment info.xml  test_agenda_moment_info_multiple_assignments.xml  test_agenda_moment_info_no_assignments.xml
tests/requests/post/agenda/futuretasks/: getfuturetasks.json
tests/requests/post/composemessage/: add-users-to-selected.xml  on_send.html  search-group.xml  search-user.xml  upload-attachement.xml
tests/requests/post/grid/: get hours.xml
tests/requests/post/postboxes/: attachment list.xml  mark message unread.xml  message list.xml  quick delete.xml  save msglabel.xml  show message.xml
tests/requests/post/topnav/: getcourseconfig.json
(+38 files in other folders)
